--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/styles.css" />
 </head>
 
 <body>
-    <header>
+    <header class="list-of-definitions">
         <nav>
             <a href="/">WebStudio</a>
             <ul>
@@ -26,74 +27,74 @@
         <address>
             <ul>
                 <li>
-                    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    <a href="mailto:info@devstudio.com" class="my-contacts">info@devstudio.com</a>
                 </li>
                 <li>
-                    <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+                    <a href="tel:+110001111111" class="my-contacts">+11 (000) 111-11-11</a>
                 </li>
             </ul>
         </address>
     </header>
     <main>
         <section>
-            <h1>Effective Solutions
+            <h1 class="main-head">Effective Solutions
                 for Your Business</h1>
-            <button type="button">Order Service</button>
+            <button type="button" class="button">Order Service</button>
         </section>
         <section>
             <h2>List of benefits</h2>
             <ul>
                 <li>
-                    <h3>Strategy</h3>
-                    <p>Our goal is to identify the business
+                    <h3 class="head-of-benefits">Strategy</h3>
+                    <p class="benefits">Our goal is to identify the business
                         problem to walk away with the perfect and creative solution.</p>
                 </li>
                 <li>
-                    <h3>Punctuality</h3>
-                    <p>Bring the key message to the brand's audience for the best price within the shortest possible
+                    <h3 class="head-of-benefits">Punctuality</h3>
+                    <p class="benefits">Bring the key message to the brand's audience for the best price within the shortest possible
                         time.</p>
                 </li>
                 <li>
-                    <h3>Diligence</h3>
-                    <p>Research and confirm brands that present the strongest digital growth opportunities and minimize
+                    <h3 class="head-of-benefits">Diligence</h3>
+                    <p class="benefits">Research and confirm brands that present the strongest digital growth opportunities and minimize
                         risk.</p>
                 </li>
                 <li>
-                    <h3>Technologies</h3>
-                    <p>Design practice focused on digital experiences. We bring forth a deep passion for
+                    <h3 class="head-of-benefits">Technologies</h3>
+                    <p class="benefits">Design practice focused on digital experiences. We bring forth a deep passion for
                         problem-solving.</p>
                 </li>
             </ul>
         </section>
         <section>
-            <h2>Our Team</h2>
+            <h2 class="team">Our Team</h2>
             <ul>
                 <li>
                     <img src="./images/MarkGuerrero.jpg" width="264" height="260" alt="Mark Guerrero" />
-                    <h3>Mark Guerrero</h3>
-                    <p>Product Designer</p>
+                    <h3 class="team-name">Mark Guerrero</h3>
+                    <p class="team-position">Product Designer</p>
                 </li>
                 <li>
                     <img src="./images/TomFord.jpg" width="264" height="260" alt="Tom Ford" />
-                    <h3>Tom Ford</h3>
-                    <p>Frontend Developer</p>
+                    <h3 class="team-name">Tom Ford</h3>
+                    <p class="team-position">Frontend Developer</p>
                 </li>
                 <li>
                     <img src="./images/CamilaGarcia.jpg" width="264" height="260" alt="Camila Garcia" />
-                    <h3>Camila Garcia</h3>
-                    <p>Marketing</p>
+                    <h3 class="team-name">Camila Garcia</h3>
+                    <p class="team-position">Marketing</p>
                 </li>
                 <li>
                     <img src="./images/DanielWilson.jpg" width="264" height="260" alt="Daniel Wilson" />
-                    <h3>Daniel Wilson</h3>
-                    <p>UI Designer</p>
+                    <h3 class="team-name">Daniel Wilson</h3>
+                    <p class="team-position">UI Designer</p>
                 </li>
             </ul>
         </section>
     </main>
     <footer>
         <a href="./index.html">WebStudio</a>
-        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        <p class="description">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
 
