--- a/index.html
+++ b/index.html
@@ -9,28 +9,28 @@
 </head>
 
 <body>
-    <header class="list-of-definitions">
+    <header>
         <nav>
-            <a href="/">WebStudio</a>
+            <a href="/" class="header-main-logo">WebStudio</a>
             <ul>
                 <li>
-                    <a href="">Studio</a>
+                    <a href="./index.html" class="list-of-definitions">Studio</a>
                 </li>
                 <li>
-                    <a href="">Portfolio</a>
+                    <a href="./index.html" class="list-of-definitions">Portfolio</a>
                 </li>
                 <li>
-                    <a href="">Contacts</a>
+                    <a href="./index.html" class="list-of-definitions">Contacts</a>
                 </li>
             </ul>
         </nav>
         <address>
             <ul>
                 <li>
-                    <a href="mailto:info@devstudio.com" class="my-contacts">info@devstudio.com</a>
+                    <a href="mailto:info@devstudio.com" class="my-contacts-list">info@devstudio.com</a>
                 </li>
                 <li>
-                    <a href="tel:+110001111111" class="my-contacts">+11 (000) 111-11-11</a>
+                    <a href="tel:+110001111111" class="my-contacts-list">+11 (000) 111-11-11</a>
                 </li>
             </ul>
         </address>
