--- a/index.html
+++ b/index.html
@@ -67,27 +67,27 @@
             </ul>
         </section>
         <section>
-            <h2 class="team">Our Team</h2>
+            <h2 class="our-team-members">Our Team</h2>
             <ul>
                 <li>
                     <img src="./images/MarkGuerrero.jpg" width="264" height="260" alt="Mark Guerrero" />
-                    <h3 class="team-name">Mark Guerrero</h3>
-                    <p class="team-position">Product Designer</p>
+                    <h3 class="team-members-name">Mark Guerrero</h3>
+                    <p class="team-member-position">Product Designer</p>
                 </li>
                 <li>
                     <img src="./images/TomFord.jpg" width="264" height="260" alt="Tom Ford" />
-                    <h3 class="team-name">Tom Ford</h3>
-                    <p class="team-position">Frontend Developer</p>
+                    <h3 class="team-members-name">Tom Ford</h3>
+                    <p class="team-member-position">Frontend Developer</p>
                 </li>
                 <li>
                     <img src="./images/CamilaGarcia.jpg" width="264" height="260" alt="Camila Garcia" />
-                    <h3 class="team-name">Camila Garcia</h3>
-                    <p class="team-position">Marketing</p>
+                    <h3 class="team-members-name">Camila Garcia</h3>
+                    <p class="team-member-position">Marketing</p>
                 </li>
                 <li>
                     <img src="./images/DanielWilson.jpg" width="264" height="260" alt="Daniel Wilson" />
-                    <h3 class="team-name">Daniel Wilson</h3>
-                    <p class="team-position">UI Designer</p>
+                    <h3 class="team-members-name">Daniel Wilson</h3>
+                    <p class="team-member-position">UI Designer</p>
                 </li>
             </ul>
         </section>
