--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <nav>
-            <a href="/" class="header-main-logo">WebStudio</a>
+            <a href="/" class="header-main-logo"><span>Studio</span>WebStudio</a>
             <ul>
                 <li>
                     <a href="./index.html" class="list-of-definitions">Studio</a>
@@ -24,20 +24,20 @@
                 </li>
             </ul>
         </nav>
-        <address>
+        <address class="my-contacts-list">
             <ul>
                 <li>
-                    <a href="mailto:info@devstudio.com" class="my-contacts-list">info@devstudio.com</a>
+                    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </li>
                 <li>
-                    <a href="tel:+110001111111" class="my-contacts-list">+11 (000) 111-11-11</a>
+                    <a href="tel:+110001111111">+11 (000) 111-11-11</a>
                 </li>
             </ul>
         </address>
     </header>
     <main>
         <section>
-            <h1 class="main-head">Effective Solutions
+            <h1 class="main-head-name">Effective Solutions
                 for Your Business</h1>
             <button type="button" class="button">Order Service</button>
         </section>
