--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
             </ul>
         </section>
         <section>
+            <section>
             <h2 class="our-team-members">Our Team</h2>
             <ul>
                 <li>
@@ -90,6 +91,7 @@
                     <p class="team-member-position">UI Designer</p>
                 </li>
             </ul>
+            </section>
         </section>
     </main>
     <footer>
