--- a/index.html
+++ b/index.html
@@ -91,6 +91,31 @@
                 </li>
             </ul>
         </section>
+        <section>
+            <h2 class="our-team-members">Our Team</h2>
+            <ul>
+                <li>
+                    <img src="./images/MarkGuerrero.jpg" width="264" alt="Mark Guerrero" />
+                    <h3 class="team-members-name">Mark Guerrero</h3>
+                    <p class="team-member-position">Product Designer</p>
+                </li>
+                <li>
+                    <img src="./images/TomFord.jpg" width="264" alt="Tom Ford" />
+                    <h3 class="team-members-name">Tom Ford</h3>
+                    <p class="team-member-position">Frontend Developer</p>
+                </li>
+                <li>
+                    <img src="./images/CamilaGarcia.jpg" width="264" alt="Camila Garcia" />
+                    <h3 class="team-members-name">Camila Garcia</h3>
+                    <p class="team-member-position">Marketing</p>
+                </li>
+                <li>
+                    <img src="./images/DanielWilson.jpg" width="264" alt="Daniel Wilson" />
+                    <h3 class="team-members-name">Daniel Wilson</h3>
+                    <p class="team-member-position">UI Designer</p>
+                </li>
+            </ul>
+        </section>
     </main>
     <footer>
         <a href="./index.html" class="footer-main-logo"><span class="name-of-logo">Studio</span>WebStudio</a>
