--- a/index.html
+++ b/index.html
@@ -92,27 +92,37 @@
             </ul>
         </section>
         <section>
-            <h2 class="our-team-members">Our Team</h2>
+            <h2 class="our-team-portfolio">Our Portfolio</h2>
             <ul>
                 <li>
-                    <img src="./images/MarkGuerrero.jpg" width="264" alt="Mark Guerrero" />
-                    <h3 class="team-members-name">Mark Guerrero</h3>
-                    <p class="team-member-position">Product Designer</p>
+                    <img src="./images/1.jpg" width="360" alt="Banking App" />
+                    <h3 class="team-apps-name">Banking App</h3>
+                    <p class="team-apps-description">App</p>
                 </li>
                 <li>
-                    <img src="./images/TomFord.jpg" width="264" alt="Tom Ford" />
-                    <h3 class="team-members-name">Tom Ford</h3>
-                    <p class="team-member-position">Frontend Developer</p>
+                    <img src="./images/2.jpg" width="360" alt="Cashless Payment" />
+                    <h3 class="team-apps-name">Cashless Payment</h3>
+                    <p class="team-apps-description">Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/CamilaGarcia.jpg" width="264" alt="Camila Garcia" />
-                    <h3 class="team-members-name">Camila Garcia</h3>
-                    <p class="team-member-position">Marketing</p>
+                    <img src="./images/3.jpg" width="360" alt="Meditation App" />
+                    <h3 class="team-apps-name">Meditation App</h3>
+                    <p class="team-apps-description">App</p>
                 </li>
                 <li>
-                    <img src="./images/DanielWilson.jpg" width="264" alt="Daniel Wilson" />
-                    <h3 class="team-members-name">Daniel Wilson</h3>
-                    <p class="team-member-position">UI Designer</p>
+                    <img src="./images/4.jpg" width="360" alt="Taxi Service" />
+                    <h3 class="team-apps-name">Taxi Service</h3>
+                    <p class="team-apps-description">Marketing</p>
+                </li>
+                <li>
+                    <img src="./images/5.jpg" width="360" alt="Screen Illustrations" />
+                    <h3 class="team-apps-name">Screen Illustrations</h3>
+                    <p class="team-apps-description">Design</p>
+                </li>
+                <li>
+                    <img src="./images/6.jpg" width="360" alt="Online Courses" />
+                    <h3 class="team-apps-name">Online Courses</h3>
+                    <p class="team-apps-description">Marketing</p>
                 </li>
             </ul>
         </section>
