--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
                     <a href="./index.html" class="list-of-definitions">Studio</a>
                 </li>
                 <li>
-                    <a href="./index.html" class="list-of-definitions">Portfolio</a>
+                    <a href="" class="list-of-definitions">Portfolio</a>
                 </li>
                 <li>
-                    <a href="./index.html" class="list-of-definitions">Contacts</a>
+                    <a href="" class="list-of-definitions">Contacts</a>
                 </li>
             </ul>
         </nav>
@@ -36,7 +36,7 @@
         </address>
     </header>
     <main>
-        <section>
+        <section class="fon-main-head">
             <h1 class="main-head-name">Effective Solutions
                 for Your Business</h1>
             <button type="button" class="button">Order Service</button>
@@ -66,10 +66,10 @@
                 </li>
             </ul>
         </section>
-        <section>
+        <section class="members-team-fon">
             <h2 class="our-team-members">Our Team</h2>
             <ul>
-                <li>
+                <li class="list-of-members">
                     <img src="./images/MarkGuerrero.jpg" width="264"  alt="Mark Guerrero" />
                     <h3 class="team-members-name">Mark Guerrero</h3>
                     <p class="team-member-position">Product Designer</p>
@@ -127,7 +127,7 @@
             </ul>
         </section>
     </main>
-    <footer>
+    <footer class="end-of-page">
         <a href="./index.html" class="footer-main-logo"><span class="name-of-logo">Studio</span>WebStudio</a>
         <p class="description">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
