--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <nav>
-            <a href="/" class="header-main-logo"><span>Studio</span>WebStudio</a>
+            <a href="/" class="header-main-logo"><span class="definition-of-company">Studio</span>WebStudio</a>
             <ul>
                 <li>
                     <a href="./index.html" class="list-of-definitions">Studio</a>
