--- a/index.html
+++ b/index.html
@@ -74,17 +74,17 @@
                     <h3 class="team-members-name">Mark Guerrero</h3>
                     <p class="team-member-position">Product Designer</p>
                 </li>
-                <li>
+                <li class="list-of-members">
                     <img src="./images/TomFord.jpg" width="264" alt="Tom Ford" />
                     <h3 class="team-members-name">Tom Ford</h3>
                     <p class="team-member-position">Frontend Developer</p>
                 </li>
-                <li>
+                <li class="list-of-members">
                     <img src="./images/CamilaGarcia.jpg" width="264" alt="Camila Garcia" />
                     <h3 class="team-members-name">Camila Garcia</h3>
                     <p class="team-member-position">Marketing</p>
                 </li>
-                <li>
+                <li class="list-of-members">
                     <img src="./images/DanielWilson.jpg" width="264" alt="Daniel Wilson" />
                     <h3 class="team-members-name">Daniel Wilson</h3>
                     <p class="team-member-position">UI Designer</p>
