--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <a href="/" class="header-main-logo"><span class="definition-of-company">Studio</span>WebStudio</a>
             <ul>
                 <li>
-                    <a href="./index.html" class="link-of-studio" class="list-of-definitions">Studio</a>
+                    <a href="./index.html" class="list-of-definitions">Studio</a>
                 </li>
                 <li>
                     <a href="" class="list-of-definitions">Portfolio</a>
