--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <a href="" class="list-of-definitions">Portfolio</a>
                 </li>
                 <li>
-                    <a class="list-of-definitions">Contacts</a>
+                    <a href="" class="list-of-definitions">Contacts</a>
                 </li>
             </ul>
         </nav>
