--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
         <nav>
             <a href="/" class="header-main-logo"><span class="definition-of-company">Studio</span>WebStudio</a>
             <ul>
-                <li>
-                    <a href="./index.html" class="list-of-definitions">Studio</a>
+                <li class="list-of-definitions">
+                    <a href="./index.html" class="link">Studio</a>
                 </li>
-                <li>
-                    <a href="" class="list-of-definitions">Portfolio</a>
+                <li class="list-of-definitions">
+                    <a href="" class="link">Portfolio</a>
                 </li>
-                <li>
-                    <a href="" class="list-of-definitions">Contacts</a>
+                <li class="list-of-definitions">
+                    <a href="" class="link">Contacts</a>
                 </li>
             </ul>
         </nav>
