--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
             <a href="/" class="header-main-logo"><span class="definition-of-company">Studio</span>WebStudio</a>
             <ul>
                 <li class="list-of-definitions">
-                    <a href="./index.html" class="link">Studio</a>
+                    <a href="./index.html" class="link-of-definitions">Studio</a>
                 </li>
                 <li class="list-of-definitions">
-                    <a href="" class="link">Portfolio</a>
+                    <a href="" class="link-of-definitions">Portfolio</a>
                 </li>
                 <li class="list-of-definitions">
-                    <a href="" class="link">Contacts</a>
+                    <a href="" class="link-of-definitions">Contacts</a>
                 </li>
             </ul>
         </nav>
