--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <address class="my-contacts-list">
             <ul>
                 <li>
-                    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    <a href="mailto:info@devstudio.com" class="email-of-company">info@devstudio.com</a>
                 </li>
                 <li>
                     <a href="tel:+110001111111">+11 (000) 111-11-11</a>
