--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
         <address class="my-contacts-list">
             <ul>
                 <li>
-                    <a href="mailto:info@devstudio.com" class="email-of-company">info@devstudio.com</a>
+                    <a href="mailto:info@devstudio.com" class="contacts-of-company">info@devstudio.com</a>
                 </li>
                 <li>
-                    <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+                    <a href="tel:+110001111111" class="contacts-of-company">+11 (000) 111-11-11</a>
                 </li>
             </ul>
         </address>
