--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
     <header>
         <nav>
-            <a href="/" class="header-main-logo"><span class="definition-of-company">Studio</span>WebStudio</a>
+            <a href="/" class="header-main-logo"><span class="definition-of-company">Web</span>Studio</a>
             <ul>
                 <li class="list-of-definitions">
                     <a href="./index.html" class="link-of-definitions">Studio</a>
@@ -139,7 +139,7 @@
         </section>
     </main>
     <footer class="end-of-page">
-        <a href="./index.html" class="footer-main-logo"><span class="name-of-logo">Studio</span>WebStudio</a>
+        <a href="./index.html" class="footer-main-logo"><span class="name-of-logo">Web</span>Studio</a>
         <p class="description">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
