--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 <link
     href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,700;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
     rel="stylesheet">
-    
+
     <link rel="stylesheet" href="./css/styles.css" />
 </head>
 
 <body>
     <header>
         <nav>
-            <a href="/" class="header-main-logo"><span class="definition-of-company">Web</span>Studio</a>
+            <a href="/" class="header-main-logo"><span class="definition-of-company">Studio</span>Web</a>
             <ul>
                 <li class="list-of-definitions">
                     <a href="./index.html" class="link-of-definitions">Studio</a>
@@ -134,7 +134,7 @@
         </section>
     </main>
     <footer class="end-of-page">
-        <a href="./index.html" class="footer-main-logo"><span class="name-of-logo">Web</span>Studio</a>
+        <a href="./index.html" class="footer-main-logo"><span class="name-of-logo">Studio</span>Web</a>
         <p class="description">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
