--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <header>
         <nav>
-            <a href="/" class="header-main-logo"><span class="definition-of-company">Studio</span>Web</a>
+            <a class="header-main-logo" href="./index.html">Web<span class="definition-of-company">Studio</span></a>
             <ul>
                 <li class="list-of-definitions">
                     <a href="./index.html" class="link-of-definitions">Studio</a>
@@ -134,7 +134,7 @@
         </section>
     </main>
     <footer class="end-of-page">
-        <a href="./index.html" class="footer-main-logo"><span class="name-of-logo">Studio</span>Web</a>
+        <a class="footer-main-logo" href="./index.html">Web<span class="name-of-logo">Studio</span></a>
         <p class="description">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
