--- a/index.html
+++ b/index.html
@@ -7,12 +7,10 @@
     <title>Document</title>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link
-    href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,700;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
     rel="stylesheet">
-    <link rel="stylesheet" href="./css/styles.css" />
-    <style>[_nghost-ng-c2697620354]{font-family:Open Sans, sans-serif;color: #121212;}</style>
-</head>
+    <link rel="stylesheet" href="./css/styles.css"/>
+</head> 
 
 <body>
     <header>
