--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
     rel="stylesheet">
+    <link rel="modern-normalize" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css" />
     <link rel="stylesheet" href="./css/styles.css"/>
 </head> 
 
 <body>
     <header>
+        <div class="container">
         <nav>
             <a class="header-main-logo" href="./index.html">Web<span class="definition-of-company">Studio</span></a>
             <ul>
@@ -38,14 +40,18 @@
                 </li>
             </ul>
         </address>
+        </div>
     </header>
     <main>
         <section class="fon-main-head">
+            <div class="container">
             <h1 class="main-head-name">Effective Solutions
                 for Your Business</h1>
             <button type="button" class="button">Order Service</button>
+            </div>
         </section>
         <section>
+            <div class="container">
             <h2>List of benefits</h2>
             <ul>
                 <li>
@@ -69,8 +75,10 @@
                         problem-solving.</p>
                 </li>
             </ul>
+            </div>
         </section>
         <section class="members-team-fon">
+            <div class="container">
             <h2 class="our-team-members">Our Team</h2>
             <ul>
                 <li class="list-of-members">
@@ -94,8 +102,10 @@
                     <p class="team-member-position">UI Designer</p>
                 </li>
             </ul>
+            </div>
         </section>
         <section>
+            <div class="container">
             <h2 class="our-team-portfolio">Our Portfolio</h2>
             <ul>
                 <li>
@@ -129,11 +139,14 @@
                     <p class="team-apps-description">Marketing</p>
                 </li>
             </ul>
+            </div>
         </section>
     </main>
     <footer class="end-of-page">
+        <div class="container">
         <a class="footer-main-logo" href="./index.html">Web<span class="name-of-logo">Studio</span></a>
         <p class="description">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        </div>
     </footer>
 </body>
 
