--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 </head> 
 
 <body>
-    <header>
+    <header class="header-container-box">
         <div class="container">
-        <nav>
+        <nav class="nav-container-box">
             <a class="header-main-logo" href="./index.html">Web<span class="definition-of-company">Studio</span></a>
             <ul>
                 <li class="list-of-definitions">
@@ -31,7 +31,7 @@
             </ul>
         </nav>
         <address class="my-contacts-list">
-            <ul>
+            <ul class="adress-container-box">
                 <li>
                     <a href="mailto:info@devstudio.com" class="contacts-of-company">info@devstudio.com</a>
                 </li>
@@ -50,11 +50,11 @@
             <button type="button" class="button">Order Service</button>
             </div>
         </section>
-        <section>
+        <section class="benefits-container-box">
             <div class="container">
-            <h2>List of benefits</h2>
-            <ul>
-                <li>
+            <h2 class="h-benefits-box">List of benefits</h2>
+            <ul class="benefits-list-box">
+                <li class="first-benefits-item">
                     <h3 class="head-of-benefits">Strategy</h3>
                     <p class="benefits">Our goal is to identify the business
                         problem to walk away with the perfect and creative solution.</p>
@@ -80,7 +80,7 @@
         <section class="members-team-fon">
             <div class="container">
             <h2 class="our-team-members">Our Team</h2>
-            <ul>
+            <ul class="staff-container-box">
                 <li class="list-of-members">
                     <img src="./images/MarkGuerrero.jpg" width="264"  alt="Mark Guerrero" />
                     <h3 class="team-members-name">Mark Guerrero</h3>
@@ -104,10 +104,10 @@
             </ul>
             </div>
         </section>
-        <section>
+        <section class="production-container-box">
             <div class="container">
             <h2 class="our-team-portfolio">Our Portfolio</h2>
-            <ul>
+            <ul class="list-of-production">
                 <li>
                     <img src="./images/1.jpg" width="360" alt="Banking App" />
                     <h3 class="team-apps-name">Banking App</h3>
