--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="container">
         <nav class="nav-container-box">
             <a class="header-main-logo" href="./index.html">Web<span class="definition-of-company">Studio</span></a>
-            <ul>
+            <ul class="section-of-contacts">
                 <li class="list-of-definitions">
                     <a href="./index.html" class="link-of-definitions">Studio</a>
                 </li>
@@ -52,7 +52,7 @@
         </section>
         <section class="benefits-container-box">
             <div class="container">
-            <h2 class="h-benefits-box">List of benefits</h2>
+            <h2 class="visually-hiden">List of benefits</h2>
             <ul class="benefits-list-box">
                 <li class="first-benefits-item">
                     <h3 class="head-of-benefits">Strategy</h3>
