--- a/index.html
+++ b/index.html
@@ -82,9 +82,11 @@
             <h2 class="our-team-members">Our Team</h2>
             <ul class="staff-container-box">
                 <li class="list-of-members">
+                    <div class="mark-guerrero-box">
                     <img src="./images/MarkGuerrero.jpg" width="264"  alt="Mark Guerrero" />
                     <h3 class="team-members-name">Mark Guerrero</h3>
                     <p class="team-member-position">Product Designer</p>
+                    </div>
                 </li>
                 <li class="list-of-members">
                     <img src="./images/TomFord.jpg" width="264" alt="Tom Ford" />
