--- a/index.html
+++ b/index.html
@@ -110,35 +110,47 @@
             <div class="container">
             <h2 class="our-team-portfolio">Our Portfolio</h2>
             <ul class="list-of-production">
-                <li>
+                <li class="bank-app-container">
                     <img src="./images/1.jpg" width="360" alt="Banking App" />
+                    <div class="name-type-app">
                     <h3 class="team-apps-name">Banking App</h3>
                     <p class="team-apps-description">App</p>
+                    </div>
                 </li>
                 <li>
                     <img src="./images/2.jpg" width="360" alt="Cashless Payment" />
+                    <div class="name-type-app">
                     <h3 class="team-apps-name">Cashless Payment</h3>
                     <p class="team-apps-description">Marketing</p>
+                    </div>
                 </li>
                 <li>
                     <img src="./images/3.jpg" width="360" alt="Meditation App" />
+                    <div class="name-type-app">
                     <h3 class="team-apps-name">Meditation App</h3>
                     <p class="team-apps-description">App</p>
+                    </div>
                 </li>
                 <li>
                     <img src="./images/4.jpg" width="360" alt="Taxi Service" />
+                    <div class="name-type-app">
                     <h3 class="team-apps-name">Taxi Service</h3>
                     <p class="team-apps-description">Marketing</p>
+                    </div>
                 </li>
                 <li>
                     <img src="./images/5.jpg" width="360" alt="Screen Illustrations" />
+                    <div class="name-type-app">
                     <h3 class="team-apps-name">Screen Illustrations</h3>
                     <p class="team-apps-description">Design</p>
+                    </div>
                 </li>
                 <li>
                     <img src="./images/6.jpg" width="360" alt="Online Courses" />
+                    <div class="name-type-app">
                     <h3 class="team-apps-name">Online Courses</h3>
                     <p class="team-apps-description">Marketing</p>
+                    </div>
                 </li>
             </ul>
             </div>
