--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
             <h2 class="our-team-members">Our Team</h2>
             <ul class="staff-container-box">
                 <li class="list-of-members">
-                    <div class="mark-guerrero-box">
                     <img src="./images/MarkGuerrero.jpg" width="264"  alt="Mark Guerrero" />
+                    <div class="mark-guerrero-box">
                     <h3 class="team-members-name">Mark Guerrero</h3>
                     <p class="team-member-position">Product Designer</p>
                     </div>
@@ -110,42 +110,42 @@
             <div class="container">
             <h2 class="our-team-portfolio">Our Portfolio</h2>
             <ul class="list-of-production">
-                <li class="bank-app-container">
+                <li class="name-app-container">
                     <img src="./images/1.jpg" width="360" alt="Banking App" />
                     <div class="name-type-app">
                     <h3 class="team-apps-name">Banking App</h3>
                     <p class="team-apps-description">App</p>
                     </div>
                 </li>
-                <li>
+                <li class="name-app-container">
                     <img src="./images/2.jpg" width="360" alt="Cashless Payment" />
                     <div class="name-type-app">
                     <h3 class="team-apps-name">Cashless Payment</h3>
                     <p class="team-apps-description">Marketing</p>
                     </div>
                 </li>
-                <li>
+                <li class="name-app-container">
                     <img src="./images/3.jpg" width="360" alt="Meditation App" />
                     <div class="name-type-app">
                     <h3 class="team-apps-name">Meditation App</h3>
                     <p class="team-apps-description">App</p>
                     </div>
                 </li>
-                <li>
+                <li class="name-app-container">
                     <img src="./images/4.jpg" width="360" alt="Taxi Service" />
                     <div class="name-type-app">
                     <h3 class="team-apps-name">Taxi Service</h3>
                     <p class="team-apps-description">Marketing</p>
                     </div>
                 </li>
-                <li>
+                <li class="name-app-container">
                     <img src="./images/5.jpg" width="360" alt="Screen Illustrations" />
                     <div class="name-type-app">
                     <h3 class="team-apps-name">Screen Illustrations</h3>
                     <p class="team-apps-description">Design</p>
                     </div>
                 </li>
-                <li>
+                <li class="name-app-container">
                     <img src="./images/6.jpg" width="360" alt="Online Courses" />
                     <div class="name-type-app">
                     <h3 class="team-apps-name">Online Courses</h3>
