--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
     <main>
         <section class="fon-main-head">
             <div class="container">
-            <h1 class="main-head-name">Effective Solutions
-                for Your Business</h1>
+            <h1 class="main-head-name">Effective Solutions for Your Business</h1>
             <button type="button" class="button">Order Service</button>
             </div>
         </section>
