--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
 <body>
     <header class="header-container-box">
+        <div class="container-contacts-list"></div>
         <div class="container">
         <nav class="nav-container-box">
             <a class="header-main-logo" href="./index.html">Web<span class="definition-of-company">Studio</span></a>
