--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
 
 <body>
     <header class="header-container-box">
-        <div class="container-contacts-list"></div>
         <div class="container">
         <nav class="nav-container-box">
             <a class="header-main-logo" href="./index.html">Web<span class="definition-of-company">Studio</span></a>
@@ -31,7 +30,7 @@
                 </li>
             </ul>
         </nav>
-        <address class="my-contacts-list">
+        <div class="my-contacts-list">
             <ul class="adress-container-box">
                 <li>
                     <a href="mailto:info@devstudio.com" class="contacts-of-company">info@devstudio.com</a>
@@ -40,6 +39,8 @@
                     <a href="tel:+110001111111" class="contacts-of-company">+11 (000) 111-11-11</a>
                 </li>
             </ul>
+        </div>
+            </address>
         </address>
         </div>
     </header>
@@ -52,24 +53,24 @@
         </section>
         <section class="benefits-container-box">
             <div class="container">
-            <h2 class="visually-hiden">List of benefits</h2>
+            <h2 class="visually-hidden">List of benefits</h2>
             <ul class="benefits-list-box">
-                <li class="first-benefits-item">
+                <li class="list-benefits-item">
                     <h3 class="head-of-benefits">Strategy</h3>
                     <p class="benefits">Our goal is to identify the business
                         problem to walk away with the perfect and creative solution.</p>
                 </li>
-                <li>
+                <li class="list-benefits-item">
                     <h3 class="head-of-benefits">Punctuality</h3>
                     <p class="benefits">Bring the key message to the brand's audience for the best price within the shortest possible
                         time.</p>
                 </li>
-                <li>
+                <li class="list-benefits-item">
                     <h3 class="head-of-benefits">Diligence</h3>
                     <p class="benefits">Research and confirm brands that present the strongest digital growth opportunities and minimize
                         risk.</p>
                 </li>
-                <li>
+                <li class="list-benefits-item">
                     <h3 class="head-of-benefits">Technologies</h3>
                     <p class="benefits">Design practice focused on digital experiences. We bring forth a deep passion for
                         problem-solving.</p>
@@ -83,25 +84,31 @@
             <ul class="staff-container-box">
                 <li class="list-of-members">
                     <img src="./images/MarkGuerrero.jpg" width="264"  alt="Mark Guerrero" />
-                    <div class="mark-guerrero-box">
+                    <div class="name-position-box">
                     <h3 class="team-members-name">Mark Guerrero</h3>
                     <p class="team-member-position">Product Designer</p>
                     </div>
                 </li>
                 <li class="list-of-members">
                     <img src="./images/TomFord.jpg" width="264" alt="Tom Ford" />
+                    <div class="name-position-box">
                     <h3 class="team-members-name">Tom Ford</h3>
                     <p class="team-member-position">Frontend Developer</p>
+                </div>
                 </li>
                 <li class="list-of-members">
                     <img src="./images/CamilaGarcia.jpg" width="264" alt="Camila Garcia" />
+                    <div class="name-position-box">
                     <h3 class="team-members-name">Camila Garcia</h3>
                     <p class="team-member-position">Marketing</p>
+                </div>
                 </li>
                 <li class="list-of-members">
                     <img src="./images/DanielWilson.jpg" width="264" alt="Daniel Wilson" />
+                    <div class="name-position-box">
                     <h3 class="team-members-name">Daniel Wilson</h3>
                     <p class="team-member-position">UI Designer</p>
+                </div>
                 </li>
             </ul>
             </div>
