--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <nav class="nav-container-box">
             <a class="header-main-logo" href="./index.html">Web<span class="definition-of-company">Studio</span></a>
             <ul class="section-of-contacts">
+                
                 <li class="list-of-definitions">
                     <a href="./index.html" class="link-of-definitions">Studio</a>
                 </li>
@@ -30,6 +31,7 @@
                 </li>
             </ul>
         </nav>
+             <address class="adress-contacts-box">
         <div class="my-contacts-list">
             <ul class="adress-container-box">
                 <li>
@@ -41,7 +43,6 @@
             </ul>
         </div>
             </address>
-        </address>
         </div>
     </header>
     <main>
