--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <nav class="nav-container-box">
         <address class="adress-contacts-box">
             <a class="header-main-logo" href="./index.html">Web<span class="definition-of-company">Studio</span></a>
-            <ul class="section-of-contacts">
-                
+            <nav class="section-of-contacts">
+            </nav>
                 <li class="list-of-definitions">
                     <a href="./index.html" class="link-of-definitions">Studio</a>
                 </li>
@@ -43,7 +43,7 @@
             </ul>
                  </div>
          </address>
-        </nav>
+        
     </div>
     </header>
     <main>
