--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
                 <li class="list-of-definitions">
                     <a href="" class="link-of-definitions">Contacts</a>
                 </li>
-            </ul>
-        </nav>
+            </ul></nav>
             <address class="adress-contacts-box">
                  <div class="my-contacts-list">
             <ul class="adress-container-box">
@@ -41,6 +40,7 @@
             </ul>
                  </div>
          </address>
+        
     </div>
     </header>
     <main>
