--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <div class="container">
         <nav class="nav-container-box">
             <a class="header-main-logo" href="./index.html">Web<span class="definition-of-company">Studio</span></a>
+            <ul class="section-of-contacts">
                 <li class="list-of-definitions">
                     <a href="./index.html" class="link-of-definitions">Studio</a>
                 </li>
@@ -27,7 +28,8 @@
                 <li class="list-of-definitions">
                     <a href="" class="link-of-definitions">Contacts</a>
                 </li>
-            </ul></nav>
+            </ul>
+        </nav>
             <address class="adress-contacts-box">
                  <div class="my-contacts-list">
             <ul class="adress-container-box">
