--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
                 </li>
             </ul>
         </nav>
-            <address class="adress-contacts-box">
-            <ul class="adress-container-box">
+            <address class="address-contacts-box">
+            <ul class="address-container-box">
                 <li>
-                    <a href="mailto:info@devstudio.com" class="contacts-of-company">info@devstudio.com</a>
+                    <a class="contacts-of-company" href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </li>
                 <li>
-                    <a href="tel:+110001111111" class="contacts-of-company">+11 (000) 111-11-11</a>
+                    <a class="contacts-of-company" href="tel:+110001111111">+11 (000) 111-11-11</a>
                 </li>
             </ul>
          </address>
