--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </nav>
             <address class="address-contacts-box">
             <ul class="address-container-box">
-                <li>
+                <li >
                     <a class="contacts-of-company" href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </li>
                 <li>
@@ -166,6 +166,10 @@
         <div class="container">
         <a class="footer-main-logo" href="./index.html">Web<span class="name-of-logo">Studio</span></a>
         <p class="description">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        </div>
+        <div class="social-media-container">
+            <p class="social-media-p">Social media</p>
+            <ul class="list-of-sm"></ul>
         </div>
     </footer>
 </body>
