--- a/index.html
+++ b/index.html
@@ -164,13 +164,44 @@
     </main>
     <footer class="end-of-page">
         <div class="container">
+            <div class="footer-fist-element">
         <a class="footer-main-logo" href="./index.html">Web<span class="name-of-logo">Studio</span></a>
         <p class="description">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-        </div>
+    </div>
         <div class="social-media-container">
             <p class="social-media-p">Social media</p>
-            <ul class="list-of-sm"></ul>
+            <ul class="list-of-sm">
+                <li class="sm-list-footer">
+                    <a class="footer-social-item-link" target="_blank" href="https://www.instagram.com/">
+                    <svg class="icons-footer-social" width="24" height="24">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                    </a>
+                </li>
+                <li class="sm-list-footer">
+                <a class="footer-social-item-link" target="_blank" href="https://x.com/home?lang=en">
+                    <svg class="icons-footer-social" width="24" height="24">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                </a>
+                </li>
+                <li class="sm-list-footer">
+                    <a class="footer-social-item-link" target="_blank" href="https://www.facebook.com/">
+                        <svg class="icons-footer-social" width="24" height="24">
+                            <use href="./images/icons.svg#icon-facebook"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="sm-list-footer">
+                    <a class="footer-social-item-link" target="_blank" href="https://www.linkedin.com/">
+                        <svg class="icons-footer-social" width="24" height="24">
+                            <use href="./images/icons.svg#icon-linkedin"></use>
+                        </svg>
+                    </a>
+                </li>
+            </ul>
         </div>
+    </div>
     </footer>
 </body>
 
