--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <a class="header-main-logo" href="./index.html">Web<span class="definition-of-company">Studio</span></a>
             <ul class="section-of-contacts">
                 <li class="list-of-definitions">
-                    <a href="./index.html" class="link-of-definitions">Studio</a>
+                    <a href="./index.html" class="firstlink-of-definitions">Studio</a>
                 </li>
                 <li class="list-of-definitions">
                     <a href="" class="link-of-definitions">Portfolio</a>
