--- a/index.html
+++ b/index.html
@@ -117,42 +117,70 @@
             <h2 class="our-team-portfolio">Our Portfolio</h2>
             <ul class="list-of-production">
                 <li class="name-app-container">
+                <div class="img-app-list">
                     <img src="./images/1.jpg" width="360" alt="Banking App" />
+                    <p class="all-apps-description">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                    Cloud Storage App</p>
+                </div>
                     <div class="name-type-app">
                     <h3 class="team-apps-name">Banking App</h3>
                     <p class="team-apps-description">App</p>
                     </div>
                 </li>
                 <li class="name-app-container">
+                <div class="img-app-list">
                     <img src="./images/2.jpg" width="360" alt="Cashless Payment" />
+                    <p class="all-apps-description">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                    Cloud Storage App</p>
+                </div>
                     <div class="name-type-app">
                     <h3 class="team-apps-name">Cashless Payment</h3>
                     <p class="team-apps-description">Marketing</p>
                     </div>
                 </li>
                 <li class="name-app-container">
+                    <div class="img-app-list">
                     <img src="./images/3.jpg" width="360" alt="Meditation App" />
+                    <p class="all-apps-description">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
+                        App · Exotic Fruit Ecommerce App ·
+                        Cloud Storage App</p>
+                    </div>
                     <div class="name-type-app">
                     <h3 class="team-apps-name">Meditation App</h3>
                     <p class="team-apps-description">App</p>
                     </div>
                 </li>
                 <li class="name-app-container">
+                    <div class="img-app-list">
                     <img src="./images/4.jpg" width="360" alt="Taxi Service" />
+                    <p class="all-apps-description">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
+                        App · Exotic Fruit Ecommerce App ·
+                        Cloud Storage App</p>
+                    </div>
                     <div class="name-type-app">
                     <h3 class="team-apps-name">Taxi Service</h3>
                     <p class="team-apps-description">Marketing</p>
                     </div>
                 </li>
                 <li class="name-app-container">
+                    <div class="img-app-list">
                     <img src="./images/5.jpg" width="360" alt="Screen Illustrations" />
+                    <p class="all-apps-description">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
+                        App · Exotic Fruit Ecommerce App ·
+                        Cloud Storage App</p>
+                    </div>
                     <div class="name-type-app">
                     <h3 class="team-apps-name">Screen Illustrations</h3>
                     <p class="team-apps-description">Design</p>
                     </div>
                 </li>
                 <li class="name-app-container">
+                    <div class="img-app-list">
                     <img src="./images/6.jpg" width="360" alt="Online Courses" />
+                    <p class="all-apps-description">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
+                        App · Exotic Fruit Ecommerce App ·
+                        Cloud Storage App</p>
+                    </div>
                     <div class="name-type-app">
                     <h3 class="team-apps-name">Online Courses</h3>
                     <p class="team-apps-description">Marketing</p>
