--- a/index.html
+++ b/index.html
@@ -55,21 +55,41 @@
             <h2 class="visually-hidden">List of benefits</h2>
             <ul class="benefits-list-box">
                 <li class="list-benefits-item">
+                    <div class="image-of-benefits">
+                        <svg class="feature-icon" width="64" height="64">
+                            <use href="./images/icons.svg#icon-antenna-1"></use>
+                        </svg>
+                    </div>
                     <h3 class="head-of-benefits">Strategy</h3>
                     <p class="benefits">Our goal is to identify the business
                         problem to walk away with the perfect and creative solution.</p>
                 </li>
                 <li class="list-benefits-item">
+                    <div class="image-of-benefits">
+                        <svg class="feature-icon" width="64" height="64">
+                            <use href="./images/icons.svg#icon-astronaut-1"></use>
+                        </svg>
+                    </div>
                     <h3 class="head-of-benefits">Punctuality</h3>
                     <p class="benefits">Bring the key message to the brand's audience for the best price within the shortest possible
                         time.</p>
                 </li>
                 <li class="list-benefits-item">
+                    <div class="image-of-benefits">
+                        <svg class="feature-icon" width="64" height="64">
+                            <use href="./images/icons.svg#icon-clock-1"></use>
+                        </svg>
+                    </div>
                     <h3 class="head-of-benefits">Diligence</h3>
                     <p class="benefits">Research and confirm brands that present the strongest digital growth opportunities and minimize
                         risk.</p>
                 </li>
                 <li class="list-benefits-item">
+                    <div class="image-of-benefits">
+                        <svg class="feature-icon" width="64" height="64">
+                            <use href="./images/icons.svg#icon-diagram-1"></use>
+                        </svg>
+                    </div>
                     <h3 class="head-of-benefits">Technologies</h3>
                     <p class="benefits">Design practice focused on digital experiences. We bring forth a deep passion for
                         problem-solving.</p>
