--- a/index.html
+++ b/index.html
@@ -102,10 +102,21 @@
             <h2 class="our-team-members">Our Team</h2>
             <ul class="staff-container-box">
                 <li class="list-of-members">
+                <div class="images-members-description">
                     <img src="./images/MarkGuerrero.jpg" width="264"  alt="Mark Guerrero" />
+                </div>
                     <div class="name-position-box">
                     <h3 class="team-members-name">Mark Guerrero</h3>
                     <p class="team-member-position">Product Designer</p>
+                    <ul class="member-sm-list">
+                        <li class="sm-item-list">
+                            <a class="sm-item-link" target="_blank" href="https://www.instagram.com/">
+                                <svg class="icons-footer-social" width="24" height="24">
+                                    <use href="./images/icons.svg#icon-instagram"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
                     </div>
                 </li>
                 <li class="list-of-members">
