--- a/index.html
+++ b/index.html
@@ -111,8 +111,29 @@
                     <ul class="member-sm-list">
                         <li class="sm-item-list">
                             <a class="sm-item-link" target="_blank" href="https://www.instagram.com/">
-                                <svg class="icons-footer-social" width="24" height="24">
+                                <svg class="icons-footer-social" width="16" height="16">
                                     <use href="./images/icons.svg#icon-instagram"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="sm-item-list">
+                            <a class="sm-item-link" target="_blank" href="https://x.com/home?lang=en">
+                                <svg class="icons-footer-social" width="16" height="16">
+                                    <use href="./images/icons.svg#witter"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="sm-item-list">
+                            <a class="sm-item-link" target="_blank" href="https://facebook.com/">
+                                <svg class="icons-footer-social" width="16" height="16">
+                                    <use href="./images/icons.svg#icon-facebook"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="sm-item-list">
+                            <a class="sm-item-link" target="_blank" href="https://linkedin.com/">
+                                <svg class="icons-footer-social" width="16" height="16">
+                                    <use href="./images/icons.svg#icon-linkedin"></use>
                                 </svg>
                             </a>
                         </li>
@@ -120,24 +141,120 @@
                     </div>
                 </li>
                 <li class="list-of-members">
+                <div class="images-members-description">
                     <img src="./images/TomFord.jpg" width="264" alt="Tom Ford" />
+                </div>
                     <div class="name-position-box">
                     <h3 class="team-members-name">Tom Ford</h3>
                     <p class="team-member-position">Frontend Developer</p>
+                                        <ul class="member-sm-list">
+                                            <li class="sm-item-list">
+                                                <a class="sm-item-link" target="_blank" href="https://www.instagram.com/">
+                                                    <svg class="icons-footer-social" width="16" height="16">
+                                                        <use href="./images/icons.svg#icon-instagram"></use>
+                                                    </svg>
+                                                </a>
+                                            </li>
+                                            <li class="sm-item-list">
+                                                <a class="sm-item-link" target="_blank" href="https://x.com/home?lang=en">
+                                                    <svg class="icons-footer-social" width="16" height="16">
+                                                        <use href="./images/icons.svg#witter"></use>
+                                                    </svg>
+                                                </a>
+                                            </li>
+                                            <li class="sm-item-list">
+                                                <a class="sm-item-link" target="_blank" href="https://facebook.com/">
+                                                    <svg class="icons-footer-social" width="16" height="16">
+                                                        <use href="./images/icons.svg#icon-facebook"></use>
+                                                    </svg>
+                                                </a>
+                                            </li>
+                                            <li class="sm-item-list">
+                                                <a class="sm-item-link" target="_blank" href="https://linkedin.com/">
+                                                    <svg class="icons-footer-social" width="16" height="16">
+                                                        <use href="./images/icons.svg#icon-linkedin"></use>
+                                                    </svg>
+                                                </a>
+                                            </li>
+                                        </ul>
                 </div>
                 </li>
                 <li class="list-of-members">
+                    <div class="images-members-description">
                     <img src="./images/CamilaGarcia.jpg" width="264" alt="Camila Garcia" />
+                </div>
                     <div class="name-position-box">
                     <h3 class="team-members-name">Camila Garcia</h3>
                     <p class="team-member-position">Marketing</p>
+                                        <ul class="member-sm-list">
+                                            <li class="sm-item-list">
+                                                <a class="sm-item-link" target="_blank" href="https://www.instagram.com/">
+                                                    <svg class="icons-footer-social" width="16" height="16">
+                                                        <use href="./images/icons.svg#icon-instagram"></use>
+                                                    </svg>
+                                                </a>
+                                            </li>
+                                            <li class="sm-item-list">
+                                                <a class="sm-item-link" target="_blank" href="https://x.com/home?lang=en">
+                                                    <svg class="icons-footer-social" width="16" height="16">
+                                                        <use href="./images/icons.svg#witter"></use>
+                                                    </svg>
+                                                </a>
+                                            </li>
+                                            <li class="sm-item-list">
+                                                <a class="sm-item-link" target="_blank" href="https://facebook.com/">
+                                                    <svg class="icons-footer-social" width="16" height="16">
+                                                        <use href="./images/icons.svg#icon-facebook"></use>
+                                                    </svg>
+                                                </a>
+                                            </li>
+                                            <li class="sm-item-list">
+                                                <a class="sm-item-link" target="_blank" href="https://linkedin.com/">
+                                                    <svg class="icons-footer-social" width="16" height="16">
+                                                        <use href="./images/icons.svg#icon-linkedin"></use>
+                                                    </svg>
+                                                </a>
+                                            </li>
+                                        </ul>
                 </div>
                 </li>
                 <li class="list-of-members">
+                    <div class="images-members-description">
                     <img src="./images/DanielWilson.jpg" width="264" alt="Daniel Wilson" />
+                </div>
                     <div class="name-position-box">
                     <h3 class="team-members-name">Daniel Wilson</h3>
                     <p class="team-member-position">UI Designer</p>
+                                        <ul class="member-sm-list">
+                                            <li class="sm-item-list">
+                                                <a class="sm-item-link" target="_blank" href="https://www.instagram.com/">
+                                                    <svg class="icons-footer-social" width="16" height="16">
+                                                        <use href="./images/icons.svg#icon-instagram"></use>
+                                                    </svg>
+                                                </a>
+                                            </li>
+                                            <li class="sm-item-list">
+                                                <a class="sm-item-link" target="_blank" href="https://x.com/home?lang=en">
+                                                    <svg class="icons-footer-social" width="16" height="16">
+                                                        <use href="./images/icons.svg#witter"></use>
+                                                    </svg>
+                                                </a>
+                                            </li>
+                                            <li class="sm-item-list">
+                                                <a class="sm-item-link" target="_blank" href="https://facebook.com/">
+                                                    <svg class="icons-footer-social" width="16" height="16">
+                                                        <use href="./images/icons.svg#icon-facebook"></use>
+                                                    </svg>
+                                                </a>
+                                            </li>
+                                            <li class="sm-item-list">
+                                                <a class="sm-item-link" target="_blank" href="https://linkedin.com/">
+                                                    <svg class="icons-footer-social" width="16" height="16">
+                                                        <use href="./images/icons.svg#icon-linkedin"></use>
+                                                    </svg>
+                                                </a>
+                                            </li>
+                                        </ul>
                 </div>
                 </li>
             </ul>
@@ -240,7 +357,7 @@
                 <li class="sm-list-footer">
                 <a class="footer-social-item-link" target="_blank" href="https://x.com/home?lang=en">
                     <svg class="icons-footer-social" width="24" height="24">
-                        <use href="./images/icons.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#witter"></use>
                     </svg>
                 </a>
                 </li>
