--- a/index.html
+++ b/index.html
@@ -344,6 +344,7 @@
         <a class="footer-main-logo" href="./index.html">Web<span class="name-of-logo">Studio</span></a>
         <p class="description">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </div>
+    <div class="social-media-container">
             <p class="social-media-p">Social media</p>
             <ul class="list-of-sm">
                 <li class="sm-list-footer">
@@ -375,6 +376,7 @@
                     </a>
                 </li>
             </ul>
+        </div>
         </div>
     </footer>
 </body>
