--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <a class="header-main-logo" href="./index.html">Web<span class="definition-of-company">Studio</span></a>
             <ul class="section-of-contacts">
                 <li class="list-of-definitions">
-                    <a href="./index.html" class="firstlink-of-definitions">Studio</a>
+                    <a href="./index.html" class="current">Studio</a>
                 </li>
                 <li class="list-of-definitions">
                     <a href="" class="link-of-definitions">Portfolio</a>
@@ -103,7 +103,7 @@
             <ul class="staff-container-box">
                 <li class="list-of-members">
                 <div class="images-members-description">
-                    <img src="./images/MarkGuerrero.jpg" width="264"  alt="Mark Guerrero" />
+                    <img src="./images/MarkGuerrero.jpg" width="264" alt="Mark Guerrero" />
                 </div>
                     <div class="name-position-box">
                     <h3 class="team-members-name">Mark Guerrero</h3>
@@ -141,9 +141,7 @@
                     </div>
                 </li>
                 <li class="list-of-members">
-                <div class="images-members-description">
                     <img src="./images/TomFord.jpg" width="264" alt="Tom Ford" />
-                </div>
                     <div class="name-position-box">
                     <h3 class="team-members-name">Tom Ford</h3>
                     <p class="team-member-position">Frontend Developer</p>
@@ -180,9 +178,7 @@
                 </div>
                 </li>
                 <li class="list-of-members">
-                    <div class="images-members-description">
                     <img src="./images/CamilaGarcia.jpg" width="264" alt="Camila Garcia" />
-                </div>
                     <div class="name-position-box">
                     <h3 class="team-members-name">Camila Garcia</h3>
                     <p class="team-member-position">Marketing</p>
@@ -219,9 +215,7 @@
                 </div>
                 </li>
                 <li class="list-of-members">
-                    <div class="images-members-description">
                     <img src="./images/DanielWilson.jpg" width="264" alt="Daniel Wilson" />
-                </div>
                     <div class="name-position-box">
                     <h3 class="team-members-name">Daniel Wilson</h3>
                     <p class="team-member-position">UI Designer</p>
