--- a/index.html
+++ b/index.html
@@ -386,6 +386,22 @@
             </div>
         </div>
     </footer>
+    <div class="mod-window-container">
+        <div class="mod-window">
+            <button type="button" class="button-form">
+
+            </button>
+        </div>
+        <p class="mod-paragraph"></p>
+        <form action="">
+            <div class="form-div">
+                <label class="label-form" for="user-name">Name</label>
+                <div class="for-input-icons">
+                    <input id="user-name" name="user-name" type="text" class="input-form">
+                </div>
+            </div>
+        </form>
+    </div>
 </body>
 
 </html>
