--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
             </button>
         </div>
         <p class="mod-paragraph"></p>
-        <form action="">
+        <form>
             <div class="form-div">
                 <label class="label-form" for="user-name">Name</label>
                 <div class="for-input-icons">
