--- a/index.html
+++ b/index.html
@@ -389,7 +389,9 @@
     <div class="mod-window-container">
         <div class="mod-window">
             <button type="button" class="button-form">
-
+                <svg class="close-button" width="8" height="8">
+                    <use href="./images/icons.svg#icon-close-black-18dp-2-1"></use>
+                </svg>
             </button>
         </div>
         <p class="mod-paragraph"></p>
