--- a/index.html
+++ b/index.html
@@ -394,7 +394,9 @@
                 </svg>
             </button>
         </div>
-        <p class="mod-paragraph"></p>
+        <p class="mod-paragraph">
+            
+        </p>
         <form>
             <div class="form-div">
                 <label class="label-form" for="user-name">Name</label>
