--- a/index.html
+++ b/index.html
@@ -407,6 +407,28 @@
                     </svg>
                 </div>
             </div>
+            <div class="form-div">
+                <label class="label-form" for="user-name">Phone
+            
+                </label>
+                <div class="for-input-icons">
+                    <input id="user-name" name="user-name" type="text" class="input-form" required>
+                    <svg class="person-icon" width="18" height="24">
+                        <use href="./images/icons.svg#icon-phone-black-18dp-1"></use>
+                    </svg>
+                </div>
+            </div>
+            <div class="form-div">
+                <label class="label-form" for="user-name">Email
+            
+                </label>
+                <div class="for-input-icons">
+                    <input id="user-name" name="user-name" type="text" class="input-form" required>
+                    <svg class="person-icon" width="18" height="24">
+                        <use href="./images/icons.svg#icon-email-black-18dp-1"></use>
+                    </svg>
+                </div>
+            </div>
         </form>
     </div>
     </div>
