--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
         </div>
             <div class="form-container-box">
                 <p class="text-form-box">Subscribe</p>
-                <form class="form-box-on">
+                <form class="formbox">
                     <label class="call-to-label">
                         <input class="call-to-send" name="call-to-input" type="email" placeholder="E-mail">
                     </label>
@@ -430,8 +430,8 @@
                 </div>
             </div>
             <div class="comments-form">
-                <label for="user-comment" class="label-form">Comment</label>
-                <textarea name="user-comment" placeholder="Text input" class="text-area"></textarea>
+                <label class="label-form" for="user-comment">Comment</label>
+                <textarea name="user-comment" placeholder="Text input" class="text-area" id="user-comment"></textarea>
             </div>
             <div class="check-box">
                 <input class="visually-hidden" type="checkbox" value="true" name="user-privacy" id="user-privacy">
